<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">stoExpress</string>
    <string name="login">登录</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan_text">请将红线对准快递运单上的条形码</string>
    <string name="baqiang">巴枪扫描</string>
    <string name="help">帮助</string>
    <string name="scan_record">扫描记录</string>
    <string name="scan_count">扫描统计</string>
    <string name="take_photo">拍照签收</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="choose_problem_type">选择问题类型</string>
    <string name="dan_hao">单号</string>
    <string name="pai_jian">派件员</string>
    <string name="operate">操作</string>
    <string name="save">保存</string>
    <string name="upload">立即上传</string>
    <string name="hint_content">手动输入或批量粘贴收件人运单号，并以“，”或换行分割，最大限度50个号码</string>
    <string name="piliang">批量录入单号</string>
    <string name="moren">不指定就是默认自己</string>
    <string name="shoujian">收件</string>
    <string name="fajian">发件</string>
    <string name="paijian">派件</string>
    <string name="daojian">到件</string>
    <string name="qianshoujian">签收件</string>
    <string name="paijianshaomian">派件扫描</string>
    <string name="qiaoshoushaomiao">签收扫描</string>
    <string name="saomiaotongji">扫描统计</string>
    <string name="wentijian">问题件</string>
    <string name="phone_hint">请输入公司业务手机号</string>
    <string name="staff_number">请输入员工编号</string>
    <string name="branch_number">请输入网点编号</string>
    <string name="password_set">请设置您的登陆密码</string>
    <string name="password_ensure">确认密码</string>
    <string name="passwd_hint">请输入密码</string>
    <string name="paijianyuan">指定派件员</string>
    <string name="hint_content2">请输入员工编号（最后四位）</string>
    <string name="sign_in">立即注册</string>
    <string name="reset_password">修改密码/忘记密码？</string>
    <string name="next">下一步</string>
    <string name="title_activity_delivery">DeliveryActivity</string>
    <string name="title_activity_scan_record">ScanRecordActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_scan_statistics">ScanStatisticsActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

</resources>
