<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_sctxs_bg" >
    
    <TextView 
        android:id="@+id/scan_dialog_single_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:text="@string/paijianyuan"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="22sp"/>
    
    <com.zhy_9.stoexpress.view.DrawableCenterTextView 
        android:id="@+id/dialog_text_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/scan_dialog_single_title"
        android:text="@string/moren"
        android:drawableLeft="@drawable/hint_icon_small"
        android:textColor="@color/grey_text"
        android:layout_centerHorizontal="true"/>
    
    <EditText 
        android:id="@+id/scan_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/hint_content2"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_text"
        android:background="@drawable/overarea_result_bg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:textCursorDrawable="@null"
        android:singleLine="true"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button 
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/scan_dialog_single_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:background="@color/grey"/>
        <Button 
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/scan_dialog_single_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ensure"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"/>
    </LinearLayout>
    

</RelativeLayout>
