<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey" >

    <com.zhy_9.stoexpress.view.TitleView
        android:id="@+id/delivery_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/delivery_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delivery_title"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <com.zhy_9.stoexpress.view.DrawableCenterTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/dan_hao"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:drawableLeft="@drawable/hint_icon_small"
            android:drawablePadding="3dp" />

        <com.zhy_9.stoexpress.view.DrawableCenterTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/pai_jian"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:drawableLeft="@drawable/hint_icon_small"
            android:drawablePadding="3dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/operate"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/delivery_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delivery_list_title"
        android:layout_above="@+id/delivery_bottom_layout"
        android:scrollbars="none" >
    </ListView>

    <LinearLayout
        android:id="@+id/delivery_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/white" >

        <com.zhy_9.stoexpress.view.DrawableCenterTextView
            android:id="@+id/delivery_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:drawableLeft="@drawable/sto_bg_save"
            android:drawableStart="@drawable/sto_bg_save"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingTop="15dp"
            android:paddingBottom="15dp" />
        <View 
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:background="@color/grey_line"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <com.zhy_9.stoexpress.view.DrawableCenterTextView
            android:id="@+id/delivery_upload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/upload"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:drawableLeft="@drawable/sto_bg_upload"
            android:drawablePadding="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp" />
    </LinearLayout>

</RelativeLayout>