<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_sctxs_bg" >

    <TextView
        android:id="@+id/list_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:text="@string/choose_problem_type"
        android:textColor="@color/yellow"
        android:textSize="22sp"/>

    <ListView
        android:id="@+id/list_dialog_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/list_dialog_bottom"
        android:layout_below="@+id/list_dialog_title"
        android:scrollbars="none"
        android:divider="@color/grey"
        android:dividerHeight="1dp"
        android:background="@color/white" >
    </ListView>


    <LinearLayout
        android:id="@+id/list_dialog_bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/grey"
        android:orientation="horizontal"
        android:paddingTop="1dp" >

        <Button
            android:id="@+id/list_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:layout_marginTop="1dp" />

        <Button
            android:id="@+id/list_dialog_ensure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/ensure"
            android:textColor="@color/black"
            android:layout_marginTop="1dp" />
    </LinearLayout>

</RelativeLayout>